k8s/notification-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service-service
spec:
  selector: 
    app: notification-service
  ports:
    - protocol: TCP
      port: 3004
      targetPort: 3004
  type: ClusterIP
