k8s/order-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service-service
spec:
  selector: 
    app: order-service
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
  type: ClusterIP
