k8s/restaurant-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service-service
spec:
  selector: 
    app: restaurant-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
